[package]
name = "cce-poll-tickers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
lambda_http = "0.5.1"
lambda-extension = "0.5.0"
sec_lib = { path = "../sec_lib"}
serde_json = "^1"
serde_derive = "^1"
tokio = { version = "1", features = ["full"]}
log = "^0.4"
simple_logger = "^1"
