[package]
name = "cce_poll_names"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
log = "^0.4"
simple_logger = "^1"
sec_lib = { path = "../sec_lib" }
tokio = { version = "1", features = ["full"]}
serde_json = "^1"
serde_derive = "^1"
